# DegreeWork

./: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Properties.ini  README.md
common/: common_functions.cpp  common_functions.h  database_worker.cpp  database_worker.h  ini_parser.cpp  ini_parser.h  word_worker.cpp  word_worker.h
http_server/: CMakeLists.txt  http_connection.cpp  http_connection.h  main.cpp  server_database_worker.cpp  server_database_worker.h
spider/: CMakeLists.txt  html_parser.cpp  html_parser.h  http_utils.cpp  http_utils.h  main.cpp  spider_database_worker.cpp  spider_database_worker.h
